# cognitive_control_model

./: .Rhistory  .gitattributes  .gitignore  Manifest.toml  Project.toml  README.md  delta_plot.csv  delta_plot_data.csv  error_rate.csv  requirements.txt  test.csv  test.py
.nova/: Configuration.json
Bayesian_Models/: bayesian_learner_ab  bayesian_learner_ab_estimate_RT_by_trial  bayesian_learner_ab_estimate_RT_by_trial.stan  bayesian_learner_sr  bayesian_learner_sr.hpp  bayesian_learner_sr.stan  bayesian_learner_sr_1k1v.stan  bayesian_learner_sr_1k1v_estimate_RT_by_trial  bayesian_learner_sr_1k1v_estimate_RT_by_trial.stan  bayesian_learner_sr_1k1v_estimate_RT_by_trial_add_decay  bayesian_learner_sr_estimate_RT_as_obj_func  bayesian_learner_sr_estimate_RT_as_obj_func_decay.stan  estimate_1k1v_1k2v_2k2v.R  estimate_1k1v_1k2v_2k2v_test_more_warmup.R  estimate_bl_sr_RT_as_obj_func.R  estimate_bl_sr_RT_as_obj_func_logRT.R  estimate_model_with_RT.R  estimate_model_with_RT_decay.R  estimate_models.R
Models/: Manifest.toml  Project.toml
Models/Pycode_Archive/: cognitive_controller.py  pyproject.toml
Pycode_Archive/: test_cognitive_controller.py
config/: dummy_rules.toml  env_sub_idx.toml
models/: DataImporter.jl  DataManipulate.jl  Manifest.toml  Project.toml  README.md  RLModels.jl  RLModels_SoftMax.jl  RLModels_basic.jl  RLModels_no_SoftMax.jl  RLmodel.jl  cognitive_controller.py  unit_test.py
notebooks/: Baysian_mulit_dim_discover.ipynb  Model_comparision.rmd  RLModelSelection.jl  [Final]Behavioral_data_analysis.rmd  [Final]Model_based_beh_analysis.rmd  (+32 more)
(+7263 files in other folders)
