[tool.poetry]
name = "cognitive_control_model"
version = "0.1.0"
description = "A set of model used in Xiaokai's computational research"
authors = ["Xiaokai Xia <dddd1007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
scikit-learn = "^0.23.1"
pymc3 = "^3.9.2"
matplotlib = "^3.3.0"
numpy = "^1.19.1"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
